redirection link added in group details

--- a/public/app/partials/Community/group-details.html
+++ b/public/app/partials/Community/group-details.html
@@ -48,8 +48,7 @@
 
 <ul class="breadcrumb">
     <li><a href="#home">Home</a></li>
-    <li ng-if="isProfile == false"><a href="#groups">Groups</a></li>
-    <li ng-if="isProfile == true"><a href="#mygroups/{{currentUserId}}">Groups</a></li>
+    <li><a href="#mygroups/{{currentUserId}}">Groups</a></li>
 </ul>
 <div ng-controller="groups" class="custom-group-section">
 <div class="col-md-12" style="padding: 0px; margin-bottom: 20px">
