classified image crop fix
classified image crop fix

--- a/public/app/partials/evezplace/create_classifieds_step2.html
+++ b/public/app/partials/evezplace/create_classifieds_step2.html
@@ -338,7 +338,7 @@
                      selected='bodyImage.selected(cords)'>
             </ng-crop>
             <br/>
-            <a ng-if="isCropped" ng-click="uploadBodyImage()" class="btn btn-primary pull-right">Upload</a>
+            <a ng-if="selection" ng-click="uploadBodyImage()" class="btn btn-primary pull-right">Upload</a>
             <br/>
         </form>
     </div>
