fixed - classified images preview while create

--- a/public/app/partials/evezplace/create_classifieds_step2.html
+++ b/public/app/partials/evezplace/create_classifieds_step2.html
@@ -115,7 +115,7 @@
                         </div>
                         <div class="col-sm-12" style="margin-top: 10px">
                             <div class="row">
-                                <img ng-src="{{addClassified.titleImage.croppedImage}}"
+                                <img ng-src="{{imageUrlPath}}{{addClassified.titleImage.croppedImage}}"
                                      style="width: 100%;"
                                      alt=""/>
                             </div>
