--- a/public/app/partials/evezplace/create_classifieds_step3.html
+++ b/public/app/partials/evezplace/create_classifieds_step3.html
@@ -23,7 +23,7 @@
                 <label>Your Target Audience (send to)</label>
             </div>
             <div class="col-md-4">
-                <label>Your Personal Circles</label>
+                <label>Your Personal Circles Through Stream It</label>
             </div>
         </div>
     </div>
@@ -76,7 +76,7 @@
             </div>
         </div>
 
-        <div class="row" style="margin-top: 20px; margin-bottom: 10px">
+        <!-- <div class="row" style="margin-top: 20px; margin-bottom: 10px">
             <div class="form-group">
                 <div class="col-md-offset-6 col-md-2">
                     <input type="checkbox"
@@ -93,7 +93,7 @@
                     <a href="" class="btn btn-primary btn-sm btn-block">Subscribe to Recco It</a>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <div class="row" style="margin-top: 10px; margin-bottom: 10px">
             <div class="form-group">
