--- a/public/app/partials/evezplace/create_classified_success.html
+++ b/public/app/partials/evezplace/create_classified_success.html
@@ -1,4 +1,4 @@
-<div class="create-store-section text-center" ng-controller="createClassifiedsSuccessCtrl">
+<div class="create-store-section text-center" ng-controller="ClassifiedsSuccessCtrl">
     <div class="row">
         <div class="col-md-12">
             <h5 style="color: #e51385; font-weight: 700; font-size: 2.0em; margin-bottom: 20px">Classified Created
