--- a/public/app/partials/evezplace/manage/Classifieds/classified_promotion.html
+++ b/public/app/partials/evezplace/manage/Classifieds/classified_promotion.html
@@ -32,7 +32,7 @@
                         <label>Your Target Audience (send to)</label>
                     </div>
                     <div class="col-md-4">
-                        <label>Your Personal Circles</label>
+                        <label>Your Personal Circles Through Stream It</label>
                     </div>
                 </div>
             </div>
@@ -85,7 +85,7 @@
                     </div>
                 </div>
 
-                <div class="row" style="margin-top: 20px; margin-bottom: 10px">
+                <!-- <div class="row" style="margin-top: 20px; margin-bottom: 10px">
                     <div class="form-group">
                         <div class="col-md-4 col-md-offset-6">
                             <input type="checkbox"
@@ -103,7 +103,7 @@
 
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="row" style="margin-top: 10px; margin-bottom: 10px">
                     <div class="form-group">
