--- a/public/app/views/classifieds/create/layout1_partial.html
+++ b/public/app/views/classifieds/create/layout1_partial.html
@@ -31,6 +31,15 @@
 
     <div class="col-sm-6">
         <div class="row classified-details" style="padding: 20px">
+            <div class="col-sm-12 col-xs-12" ng-if="OwnerID == loggedInUserId">
+                <div class="col-sm-2 col-xs-6 col-md-offset-7">
+                    <a href ng-click="publishClassified()" class="btn btn-primary">Publish</a>
+                </div>
+                <div class="col-sm-2 col-xs-6 col-md-offset-1">
+                    <a href="#classified/{{SelectedClassified}}/manage/classified_type" class="btn btn-primary">Manage</a>
+                </div>
+            </div><br>
+
             <h3 style="font-weight: 600">{{classifiedDetails.title}}</h3>
 
             <h2 style="margin: 30px 0px">{{classifiedDetails.deal_description}}</h2>
@@ -88,3 +97,57 @@
         </div>
     </div>
 </div>
+<script type="text/ng-template" id="finishClassifiedDialogId">
+    <div class="ngdialog-buttons popuptemplate">
+        <div class="create-store-section text-center" style="margin-bottom: 0px">
+            <div class="row">
+                <div class="col-md-12">
+                    <h5 style="color: #e51385; font-weight: 700; font-size: 1.8em; margin-bottom: 20px">Publish
+                        Classified</h5>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+            <span class="fa-stack fa-lg fa-2x">
+              <i class="fa fa-circle fa-stack-2x" style="color: #ffffff"></i>
+              <i class="fa fa-check fa-stack-1x fa-inverse" style="color: #009966"></i>
+            </span>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-12" style="padding: 20px 80px">
+                    <p style="font-weight: 100; font-size: 1.2em">You can activate your classified now or publish it to
+                        recco channel.
+                    </p>
+                </div>
+            </div>
+
+            <div class="row" style="margin-top: 10px">
+                <div class="col-md-6  col-md-offset-3">
+                    <p style="font-weight: 400; font-size: 1.2em">Publish classified to recco?
+                        <input type="checkbox"
+                               ng-model="publishToRecco"
+                               ng-checked="publishToRecco"/>
+                    </p>
+                </div>
+            </div>
+
+            <div class="row" style="margin-top: 10px">
+                <div class="col-md-6  col-md-offset-3">
+                    <p style="font-weight: 400; font-size: 1.2em">Activate classified now?
+                        <input type="checkbox"
+                               ng-model="activateClassified"
+                               ng-checked="activateClassified"/>
+                    </p>
+                </div>
+            </div>
+
+            <div class="row" style="margin-top: 30px;">
+                <div class="col-md-6  col-md-offset-3">
+                    <a ng-click="finishClassified(activateClassified)" class="btn btn-primary btn-block btn-lg">Finish</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</script>
