--- a/public/app/partials/evezplace/promotion_partial.html
+++ b/public/app/partials/evezplace/promotion_partial.html
@@ -1,5 +1,5 @@
 <div class="row" id="promotion-section" ng-controller="evezplacePromotionCtrl">
-    <div class="col-sm-12">
+    <div class="col-sm-12" ng-if="CheckRole == 'Admin'">
         <div class="jumbotron alert alert-dismissible promotion-jumbotron" id="no-border-round" role="alert">
             <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span>
             </button>
