--- a/public/app/partials/home/home.html
+++ b/public/app/partials/home/home.html
@@ -1,80 +1,78 @@
 <!-- Main component for a primary marketing message or call to action -->
-<div id="myCarousel" class="carousel slide carousel-fade" data-ride="carousel" data-interval="30000" style="background-color:#FFF5FF">
+<div id="myCarousel" class="carousel slide carousel-fade" data-ride="carousel" data-interval="30000" style="background-color:#FFFFFF">
 
     <!-- Wrapper for slides -->
     <div class="jumbotron home-jumbotron"
-         ng-show="caption" id="no-border-round" ng-controller="HomeController" style="padding:10px 30px 10px 40px;background-color:#FFF5FF;border: 1px solid #CFCFCE;margin-bottom:4px;">
+         ng-show="caption" id="no-border-round" ng-controller="HomeController" style="padding:10px 30px 10px 40px;background-color:#FFFFFF;border: 1px solid #CFCFCE;margin-bottom:4px;">
         <div class="carousel-inner"
              ng-intro-options="IntroOptions" ng-intro-method="CallMe"
              ng-intro-oncomplete="CompletedEvent" ng-intro-onexit="ExitEvent"
              ng-intro-onchange="ChangeEvent" ng-intro-onbeforechange="BeforeChangeEvent"
              ng-intro-autostart="false">
-            <div class="item active" id="home_item" style="background-color:#FFF5FF">
+             
+            <!-- To be shown if not logged in -->
+            <div class="col-md-12" ng-hide="loggedIn" style="padding:0px;">
 
-                <!-- To be shown if not logged in -->
-                <div class="col-md-12" ng-hide="loggedIn" style="padding:0px;">
-
-                    <div class="col-md-4">
-                    <h1 style="font-size:22px;margin-bottom:10px;margin-top:10px;">Evezown</h1>
-                    <p style="text-align: justify;font-size:15px;">
-                        <img src="img/custom_images/WomenShopping/evezown_women3.jpg" class="description-img" width="100" height="100"/>
-                        <a href="#streamit" style="text-decoration:none;">Evezown</a> is a unique commerce and community platform for women. If you are an entrepreneur, service professional or an organisation/association, Evezown offers a unique web presence combined with interaction and transaction features and a host of Ecom and digital promotional tools.</p>
-                    </div>
-
-                    <div class="col-md-4">
-                    <h1 style="font-size:22px;margin-bottom:10px;margin-top:10px;">Evezplace</h1>
-                    <p style="text-align: justify;font-size:15px;">
-                        <img src="img/custom_images/WomenShopping/evezown_women3.jpg" class="description-img" width="100" height="100"/>
-                        This is an Ecommerce marketplace for showcasing women centric products and services on our five key categories. If you are already in business or intend to start one, you can create your store and/or classifieds. Anyone can access and buy on this platform but only a woman can own a store.</p>
-                    </div>
-
-                    <div class="col-md-4">
-                    <h1 style="font-size:22px;margin-bottom:10px;margin-top:10px;">Wopportunity</h1>
-                    <p style="text-align: justify;font-size:15px;">
-                    <!-- <a href="#streamit" style="text-decoration:none;">Evezown</a> -->
-                    <img src="img/custom_images/WomenShopping/evezown_women3.jpg" class="description-img" width="100" height="100"/>
-                    This is resourcing platform. If you are in business, you can use it for hiring talent. As a working professional you can use this platform to find an opportunity of your choice. Customized categorization helps you identify suitable opportunity.</p>
-                    </div>
-
-                    <div class="col-md-12">
-                        <div class="col-md-4 zero-left-padding">
-                            <!-- <p id="eye-buy"><i>Explore Evezown.com. Make it your own place!</i></p> -->
-                        </div>
-                        <div class="col-md-4">
-                            <button class="btn btn-lg btn-primary pull-right" ng-click="CallMe();" style="margin-top:10px;">Take a Tour</button>
-                        </div>
-                        <div class="col-md-4" ng-hide="loggedIn">
-                            <a class="btn btn-lg btn-primary pull-right" href="#requestinvite" role="button" style="margin-top:10px;">Create Signup Invite &raquo;</a>
-                        </div>
-                        <div class="col-md-4" ng-if="loggedIn">
-                            <a class="btn btn-lg btn-primary pull-right" href="#community" role="button">Build
-                                Community &raquo;</a>
-                        </div>
-                    </div>
+                <div class="col-md-4" >
+                <h1 style="font-size:22px;margin-bottom:10px;margin-top:10px;background-color:#FFFFFF;" id="step1" data-target="#step1" data-toggle="tab" data-slide-to="0">Evezown</h1>
+                <p style="text-align: justify;font-size:15px;">
+                    <img src="img/mysite.jpg" class="description-img" width="150" height="90" style="border: 2px solid #FFFFFF;"/>
+                    <a href="#streamit" style="text-decoration:none;">Evezown</a> is a unique commerce and community platform for women. If you are an entrepreneur, service professional or an organisation/association, Evezown offers a unique web presence combined with interaction and transaction features and a host of Ecom and digital promotional tools.</p>
                 </div>
 
-                <div class="col-md-12" ng-if="loggedIn">
-                    <h1>Evezown</h1>
-                    <p style="text-align:justify;">Good to see you, Go ahead create your own place, create your Evezsite, build your closed private community, use our single window to create stores, classifieds, promote your products and services through host of promotional features available on Evezown.</p>
+                <div class="col-md-4" >
+                <h1 style="font-size:22px;margin-bottom:10px;margin-top:10px;background-color:#FFFFFF" id="step2" data-target="#step2" data-toggle="tab" data-slide-to="1">Evezplace</h1>
+                <p style="text-align: justify;font-size:15px;">
+                    <img src="img/market_place.jpg" class="description-img" width="150" height="80" style="border: 2px solid #FFFFFF;"/>
+                    This is an Ecommerce marketplace for showcasing women centric products and services on our five key categories. If you are already in business or intend to start one, you can create your store and/or classifieds. Anyone can access and buy on this platform but only a woman can own a store.</p>
+                </div>
 
-                    <div class="request-invite">
-                        <div class="col-md-8 zero-left-padding">
-                            <p id="eye-buy"><a href="#profile/{{userId}}/personalinfo" style="text-decoration:none;"><i>Complete your profile now.</i></a></p>
-                        </div>
-                        <div class="col-md-4" ng-hide="loggedIn">
-                            <a class="btn btn-lg btn-primary pull-right" href="#requestinvite" role="button">Create Signup Invite &raquo;</a>
-                        </div>
-                        <div class="col-md-4" ng-show="loggedIn" style="margin-top: 40px">
-                            <a class="btn btn-lg btn-primary pull-right" href="#profile/{{userId}}/personalinfo" role="button">Complete
-                                your profile</a>
-                        </div>
+                <div class="col-md-4" >
+                <h1 style="font-size:22px;margin-bottom:10px;margin-top:10px;background-color:#FFFFFF" id="step3" data-target="#step3" data-toggle="tab" data-slide-to="2">Wopportunity</h1>
+                <p style="text-align: justify;font-size:15px;">
+                <!-- <a href="#streamit" style="text-decoration:none;">Evezown</a> -->
+                    <img src="img/mysite.jpg" class="description-img" width="150" height="90" style="border: 2px solid #FFFFFF;"/>
+                    This is resourcing platform. If you are in business, you can use it for hiring talent. As a working professional you can use this platform to find an opportunity of your choice. Customized categorization helps you identify suitable opportunity.</p>
+                </div>
+
+                <div class="col-md-12">
+                    <div class="col-md-4 zero-left-padding">
+                        <!-- <p id="eye-buy"><i>Explore Evezown.com. Make it your own place!</i></p> -->
+                    </div>
+                    <div class="col-md-4">
+                        <button class="btn btn-lg btn-primary pull-right" ng-click="CallMe();" style="margin-top:10px;">Take a Tour</button>
+                    </div>
+                    <div class="col-md-4" ng-hide="loggedIn">
+                        <a class="btn btn-lg btn-primary pull-right" href="#requestinvite" role="button" style="margin-top:10px;">Create Signup Invite &raquo;</a>
+                    </div>
+                    <div class="col-md-4" ng-if="loggedIn">
+                        <a class="btn btn-lg btn-primary pull-right" href="#community" role="button">Build
+                            Community &raquo;</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-12" ng-if="loggedIn">
+                <h1>Evezown</h1>
+                <p style="text-align:justify;">Good to see you, Go ahead create your own place, create your Evezsite, build your closed private community, use our single window to create stores, classifieds, promote your products and services through host of promotional features available on Evezown.</p>
+
+                <div class="request-invite">
+                    <div class="col-md-8 zero-left-padding">
+                        <p id="eye-buy"><a href="#profile/{{userId}}/personalinfo" style="text-decoration:none;"><i>Complete your profile now.</i></a></p>
+                    </div>
+                    <div class="col-md-4" ng-hide="loggedIn">
+                        <a class="btn btn-lg btn-primary pull-right" href="#requestinvite" role="button">Create Signup Invite &raquo;</a>
+                    </div>
+                    <div class="col-md-4" ng-show="loggedIn" style="margin-top: 40px">
+                        <a class="btn btn-lg btn-primary pull-right" href="#profile/{{userId}}/personalinfo" role="button">Complete
+                            your profile</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <!-- End Carousel Inner -->
-    <div class="middle-navbar custom-middle-navbar" ng-controller="ApplicationCtrl">
+    <!-- <div class="middle-navbar custom-middle-navbar" ng-controller="ApplicationCtrl">
         <div class="btn-group btn-group-justified zero-left-padding" role="group" aria-label="Justified button group">
             <ul class="nav nav-pills nav-justified">
                 <li id="step1" data-target="#myCarousel" data-toggle="tab" data-slide-to="0" class="active">
@@ -91,20 +89,6 @@
                         <p>Own your place</p>
                     </a>
                 </li>
-                <!-- <li id="step2" data-target="#myCarousel" data-toggle="tab" data-slide-to="1">
-                    <a ng-hide="loggedIn" data-target="#myCarousel" class="btn btn-link nounderline"
-                       role="button">
-                        <h3 >Woice</h3>
-
-                        <p>connect and share</p>
-                    </a>
-                    <a ng-show="loggedIn" href="#trending" data-target="#myCarousel"
-                       class="active btn btn-link nounderline" role="button">
-                        <h3>Woice</h3>
-
-                        <p>connect and share</p>
-                    </a>
-                </li> -->
                 <li id="step2" data-target="#myCarousel" data-slide-to="1">
                     <a href="#evezplace" data-target="#myCarousel" data-toggle="tab" class="btn btn-link" role="button">
                         <h4>EvezPlace</h4>
@@ -123,7 +107,7 @@
 
             </ul>
         </div>
-    </div>
+    </div> -->
 </div>
 <!-- End Carousel -->
 <div class="col-md-12" ng-include src='"partials/home/homeproductmenu.html"' ng-controller="HomeProductMenuController"></div>
