modified the admin blog section.
modified the admin  blog section.

--- a/public/app/partials/admin/EditBlogs.html
+++ b/public/app/partials/admin/EditBlogs.html
@@ -1,153 +1,32 @@
-<!-- Main component for a primary marketing message or call to action -->
-<div class="jumbotron alert alert-dismissible inner-jumbotron shadow " ng-show="caption" id="no-border-round"
-     role="alert" ng-controller="ApplicationCtrl">
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span>
-    </button>
-    <h1>Build Community</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-8 col-xs-9 bhoechie-tab-container">
+            <div class="col-lg-2 col-md-2 col-sm-2 bhoechie-tab-menu">
+                <div
+                        ng-include src='"partials/admin/adminLeftMenu.html"'>
+                </div>
+            </div>
 
-    <p style="text-align:justify">Build community helps you replicate your existing, offline community online. You can use features like Evez, Circles, Groups, Events, Blogs and Discussions to interact with your community and grow it. These features are linked to WoiceIt, the streaming channel for promotion and propagation. This helps you spread the word better among your community about your activities.
-    </p>
-</div>
-<!-- Static navbar -->
-<!-- Static navbar -->
-<nav class="navbar navbar-default" id="navContainer">
-    <div id="navbar1">
-        <ul class="nav navbar-nav">
-            <li ng-class="{ active: isActive('/community')}"><a href="#community" >Build Community</a>
-            </li>
-            <li ng-class="{ active: isActive('/trending')}"><a href="#trending">Woice It</a></li>
+            <div class="col-lg-10 col-md-10 col-sm-10 bhoechie-tab">
+                <!-- flight section -->
 
-            <li ng-class="{ active: isActive('/streamit')}"><a href="#streamit">Recco it</a></li>
-            <li ng-class="{ active: isActive('/explore')}">
-                <!-- Template which needs to be shown on click -->
-                <script type="text/ng-template" id="explore">
-                    <div class="triangle"></div>
-                    <div class="ns-popover-tooltip">
-                        <ul>
-                            <li style="padding: 5px; text-align: center"><a  href="#evezplace">EvezPlace</a></li>
-                            <li style="padding: 5px; text-align: center"><a  href="#wopportunity">Wopportunity</a></li>
-                        </ul>
-                    </div>
-                </script>
-
-                <a ns-popover
-                   ns-popover-template="explore"
-                   ns-popover-trigger="click"
-                   ns-popover-theme="ns-popover-list-theme">
-                    Explore
-                </a>
-            </li>
-            <li ng-class="{ active: isActive('/search/advanced')}"><a href="#search/advanced"
-                                                                      id="search">Search&nbsp;<span
-                    class="fa fa-search" id="searchIcon"></span></a>
-            </li>
-        </ul>
-    </div>
-</nav>
-
-<ul class="breadcrumb">
-    <li><a href="#home">Home</a></li>
-    <li><a href="#blogs">Blogs</a></li>
-</ul>
-<div ng-controller="EditBlogsCtrl">
-    <div class="row" style="padding-bottom: 5px">
-        <div class="col-md-4">
-            <ul class="list-inline">
-                <li><h5>choose category?</h5></li>
-            <li>
-            <!--<select class="form-control" style="display: block;" id="category-type"-->
-                    <!--ng-options="category as category.category_name group by category.section_name for category in categories"-->
-                    <!--ng-change="GetSubCategories()" data-ng-model="category1" ng-init="category1 = category1.id == category.id ? category : category[0]">-->
-                <input class="form-control" type="text" placeholder="Search Category"
-                       ng-model="selectedCategory"
-                       typeahead="category as category.category_name for category in categories | filter:$viewValue | limitTo:10"
-                       typeahead-min-length='1'
-                       typeahead-on-select='onSelectPart($item)'
-                       typeahead-template-url="brandSearchTemplate.html">
-            <!--</select>-->
-                <!--<select class="form-control" ng-model="selectOption">-->
-                    <!--<option ng-model="category1"-->
-                            <!--ng-repeat="category in categories"-->
-                            <!--value="{{category.category_name}}" ng-init="category1 = category1.category_name == category.category_name ? category : category[0]">-->
-                        <!--{{category.category_name}}-->
-                    <!--</option>-->
-                <!--</select>-->
-            </li>
-            </ul>
+                <div class="bhoechie-tab-content active">
+						<div ng-controller="EditBlogsCtrl">
+						   
+						    <input class="form-control" type="text" placeholder="Title"
+						           id="title" ng-model="selectedBlog.title" style="margin-bottom: 10px; height: 50px; font-size: 18px" maxlength="255"/>
+						    <text-angular ng-model="htmlVariable"></text-angular>
+						    <div class="col-md-2 pull-right" style="padding-top: 10px; padding-bottom: 10px;">
+						        <button class="btn btn-primary btn-block" id="btn-publish"
+						                ng-click="EditBlogById(true)">Publish</button>
+						    </div>
+						    <div class="col-md-2 pull-right" style="padding-top: 10px; padding-bottom: 10px;">
+						        <button class="btn btn-primary btn-block" id="btn-Edit"
+						                ng-click="EditBlogById(false)">Save as draft</button>
+						    </div>
+						</div>
+                </div>
+            </div>
         </div>
-        <div class="col-md-4">
-            <ul class="list-inline">
-            <li><h5>choose sub category?</h5></li>
-
-            <li>
-                <!--<select class="form-control" style="display: block;" id="sub-category-type"-->
-                        <!--ng-options="subcategory as subcategory.subcategory_name for subcategory in subcategories"-->
-                        <!--data-ng-model="selectedsubcategories" ng-change="ReloadBrand()" ng-init="selectedsubcategories = selectedsubcategories">-->
-                <!--</select>-->
-                <!--<select class="form-control" ng-change="ReloadBrand()" ng-model="selectsubcategories">-->
-                    <!--<option ng-model="selectedsubcategories"-->
-                            <!--ng-repeat="subcategory in subcategories"-->
-                            <!--value="{{subcategory.subcategory_name}}">-->
-                        <!--{{subcategory.subcategory_name}}-->
-                    <!--</option>-->
-                <!--</select>-->
-                <input class="form-control" type="text" placeholder="Search Sub Category"
-                       ng-model="selectedSubCategory"
-                       typeahead="subcategory as subcategory.subcategory_name for subcategory in subcategories | filter:$viewValue | limitTo:10"
-                       typeahead-min-length='1'
-                       typeahead-on-select='onSelectSubPart($item)'
-                       typeahead-template-url="brandSearchTemplate.html">
-            </li>
-                </ul>
-        </div>
-        <div class="col-md-4">
-            <ul class="list-inline">
-        <li><h5>visibility settings</h5></li>
-                <li>
-            <!--<select class="form-control" style="display: block;" id="visibility-type"-->
-                    <!--ng-options="visibility as visibility.type for visibility in visibilties"-->
-                    <!--data-ng-model="selectedVisibility">-->
-            <!--</select>-->
-                    <!--<select class="form-control" ng-model="selectedVisibility">-->
-                        <!--<option ng-model="selectedVisibility"-->
-                                <!--ng-repeat="visibility in visibilties"-->
-                                <!--value="{{visibility.type}}">-->
-                            <!--{{visibility.type}}-->
-                        <!--</option>-->
-                    <!--</select>-->
-                    <input class="form-control" type="text" placeholder="Search Visibility"
-                           ng-model="showVisibility"
-                           typeahead="visibility as visibility.type for visibility in visibilties | filter:$viewValue | limitTo:10"
-                           typeahead-min-length='1'
-                           typeahead-on-select='onSelectVisibilityPart($item)'
-                           typeahead-template-url="brandSearchTemplate.html">
-                </li>
-                </ul>
-        </div>
-    </div>
-    <div class="row"  style="padding-bottom: 10px">
-
-    </div>
-    <div class="row"  style="padding-bottom: 10px">
-
-    </div>
-    <input class="form-control" type="text" placeholder="Title"
-           id="title" ng-model="selectedBlog.title" style="margin-bottom: 10px; height: 50px; font-size: 18px" maxlength="255"/>
-    <text-angular ng-model="htmlVariable"></text-angular>
-    <div class="col-md-2 pull-right" style="padding-top: 10px; padding-bottom: 10px;">
-        <button class="btn btn-primary btn-block" id="btn-publish"
-                ng-click="EditBlogById(true)">Publish</button>
-    </div>
-    <div class="col-md-2 pull-right" style="padding-top: 10px; padding-bottom: 10px;">
-        <button class="btn btn-primary btn-block" id="btn-Edit"
-                ng-click="EditBlogById(false)">Save as draft</button>
     </div>
 </div>
-
-<script type="text/ng-template" id="brandSearchTemplate.html">
-    <a style="padding-left: 5px">
-        <img src="{{imagePath}}+'image/show/'+{{match.model.imageName }}/32/32"
-             alt="" style="margin-right: 5px"/>
-        <span bind-html-unsafe="match.label | typeaheadHighlight:query"></span>
-    </a>
-</script>
