style changes in admin pages
style changes in admin pages

--- a/public/app/app.css
+++ b/public/app/app.css
@@ -1016,6 +1016,7 @@ ul#strength {
 /*  bhoechie tab */
 div.bhoechie-tab-container{
     z-index: 10;
+    padding-left:0px;
     background-color: #ffffff;
     border-radius: 0px;
     -moz-border-radius: 4px;
