--- a/public/app/views/admin/evezplace/manage_recommendations.html
+++ b/public/app/views/admin/evezplace/manage_recommendations.html
@@ -5,7 +5,7 @@
                 <div ng-include src='"partials/admin/adminLeftMenu.html"'></div>
             </div>
             <div class="col-lg-10 col-md-10 col-sm-10 bhoechie-tab-container" style="margin-bottom: 20px;
-                            padding-bottom: 20px" ng-controller="manageRecommendationsCtrl">
+                            padding-bottom: 20px; padding-left: 20px" ng-controller="manageRecommendationsCtrl">
                 <div ng-include src='"views/admin/evezplace/recommendations_partial.html"'></div>
             </div>
         </div>
