--- a/public/app/views/admin/evezplace/manage_trending_items.html
+++ b/public/app/views/admin/evezplace/manage_trending_items.html
@@ -1,14 +1,16 @@
 <div class="container">
     <div class="row">
+     
         <div class="col-lg-12 col-md-12 col-sm-8 col-xs-9">
             <div class="col-lg-2 col-md-2 col-sm-2 bhoechie-tab-menu">
                 <div ng-include src='"partials/admin/adminLeftMenu.html"'></div>
             </div>
             <div class="col-lg-10 col-md-10 col-sm-10 bhoechie-tab-container" style="margin-bottom: 20px;
-                            padding-bottom: 20px" ng-controller="manageTrendingItemsCtrl">
+                            padding-bottom: 20px; padding-left: 20px" ng-controller="manageTrendingItemsCtrl">
                 <div ng-include src='"views/admin/evezplace/trending_items_partial.html"'></div>
             </div>
         </div>
+      
     </div>
 </div>
 
