Default image for blog event and group updated

--- a/public/app/partials/Community/blog-details.html
+++ b/public/app/partials/Community/blog-details.html
@@ -66,7 +66,9 @@
                             <a href class="btn btn-primary" ng-click="ChangeBlogCover();" id="ChangeBlogCover" style="background-color:#e50880;color:#ffffff;position:absolute;opacity:0.6">Change Cover</a>
                         </div>
                     </div>
-                    <img ng-src="{{coverImage}}" alt="" class="img-responsive"/>
+                    <img  ng-src="{{coverImage}}" ng-if="coverImage != null" alt="" class="img-responsive"/>
+                    <img src="img/blog.png" ng-if="coverImage == null" alt="" class="img-responsive"/>
+                    
                 </div>
             </figure>
             <section>
